- ADD: The dialog asking the user to enter an URL (e.g.
       for the repo browser) has now a history of
       the last used URL's for the user to select from. (Stefan)
- ADD: New option to use a short version of the date
       for log messages. (Thomas Epting)
- ADD: The property page now shows the subversion
       properties in a combobox. (Stefan)
- ADD: Ability to use different merge/diff programs
       for different filetypes. (Thomas Epting)
- ADD: Warn the user before creating a repository
       on a network share. (Stefan)
- ADD: Warn the user if (s)he tries to checkout/import
       via file to a repository on a network share. (Stefan)
- ADD: TortoiseMerge shows the line numbers 
       in the views. (Stefan)
- ADD: Autopatch function to patch all files 
       automatically. (Stefan)
- ADD: Line diff bar at the bottom of the two pane
       view, showing the two lines above each other
       (if the lines are different). Issue 88. (Stefan)
- ADD: A magnifier for the locatorbar in TME. (Stefan)
- CHG: Many cosmetic changes to the UI. (Stefan)
- CHG: The log dialog shows now the log messages
       in the fourth column (a short version) so
       you can see the logs without clicking on
       the revision. (Thomas Epting)
- CHG: The font combobox now only shows each font
       once. (Stefan)
- BUG: If the "Check for updates" dialog is started
       for a file (not for a folder), the filename
       wasn't shown. (Stefan)
- BUG: Fix various bugs with svn:externals and the
       commit/add dialogs. (Stefan)
- BUG: The shell part didn't have the APR_ICONV_PATH
       environement variable set. (Stefan)
- BUG: Various bugfixes for TortoiseMerge. (Stefan)

Version 1.0
- ADD: New option in the settings dialog to set the 
       filetimes to the last commit time. This solves
       issue 83. (Stefan)
- ADD: From the log dialog it's now possible to start
       the repository browser so it browses the
       selected revision. (Stefan)