@@ -299,6 +299,12 @@ STRINGTABLE
 BEGIN
     IDS_MENUDESCCREATEPATCH "Creates a unified diff file with all changes you made"
     IDS_MENUDESCAPPLYPATCH  "Applies a unified diff file to the working copy"
+    IDS_TT_IGNORE           "svn:ignore\r\nA newline separated list of file patterns to ignore."
+    IDS_TT_KEYWORDS         "svn:keywords\r\nKeywords to be expanded. Valid keywords are:\r\nURL, HeadURL\t\t\tThe URL for the head version of the object.\r\nAuthor, LastChangedBy\t\tThe last person to modify the file.\r\nDate, LastChangedDate\t\tThe date/time the object was last modified.\r\nRev, LastChangedRevision\tThe last revision the object changed.\r\nId\t\t\t\tA compressed summary of the previous 4 keywords."
+    IDS_TT_EXECUTABLE       "svn:executable\r\nIf present, make the file executable. This property cannot be set on a directory. A non-recursive attempt will fail, and a recursive attempt will set the property only on the file children of the directory."
+    IDS_TT_EOLSTYLE         "svn:eol-style\r\nOne of 'native', 'LF', 'CR', 'CRLF'."
+    IDS_TT_MIMETYPE         "svn:mime-type\r\nThe mimetype of the file. Used to determine whether to merge the file, and how to serve it from Apache. A mimetype beginning with 'text/' (or an absent mimetype) is treated as text. Anything else is treated as binary."
+    IDS_TT_EXTERNALS        "svn:externals\r\nA newline separated list of module specifiers, each of which consists of a relative directory path, optional revision flags, and an URL. For example\r\nfoo\t\thttp://example.com/repos/zig\r\nfoo/bar -r 1234\thttp://example.com/repos/zag"
 END
 
 #endif    // English (U.S.) resources
