@@ -4,7 +4,9 @@
 - ADD: New option to use a short version of the date
        for log messages. (Thomas Epting)
 - ADD: The property page now shows the subversion
-       properties in a combobox. (Stefan)
+       properties in a combobox. 
+       There's also a tooltip showing additional
+       information about the svn: properties. (Stefan)
 - ADD: Ability to use different merge/diff programs
        for different filetypes. (Thomas Epting)
 - ADD: Warn the user before creating a repository
